# fastapi-url-shortener

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yaml  pyproject.toml
.github/workflows/: python-check.yml
tests/: conftest.py
tests/test_schemas/: test_short_url.py
tests/tests_api/: conftest.py  test_main_veiews.py
tests/tests_api/test_short_urls/: test_crud.py
tests/tests_api/test_short_urls/test_views/: test_details_views.py  test_list_views.py
url_shortener/: app_lifespan.py  config.default.yaml  config.py  exceptions.py  logging_config.py  main.py
url_shortener/api/: __init__.py  main_views.py  redirect_views.py
url_shortener/api/short_urls/: crud.py  dependencies.py
url_shortener/api/short_urls/views/: __init__.py  details_views.py  list_views.py
url_shortener/dependencies/: short_url.py
url_shortener/misc/: flash_messages.py
url_shortener/rest/: __init__.py  main_view.py
url_shortener/rest/short_urls/: __init__.py  create_view.py  delete_view.py  list_view.py  update_view.py
url_shortener/schemas/: health.py  short_url.py
url_shortener/services/short_urls/: form_response_helper.py
url_shortener/storage/short_url/: __init__.py  crud.py
url_shortener/templates/: about.html  base.html  home.html
url_shortener/templates/components/: develop_message.html  navbar.html
url_shortener/templates/macros/: form-fields.html
url_shortener/templates/short-urls/: create.html  list.html  update.html
url_shortener/templates/short-urls/components/: delete_modal_window.html
url_shortener/templates/short-urls/macros/: render_form.html
url_shortener/templating/: __init__.py  jinja2_template.py  jinja_templates.py
