[project]
name = "fastapi-url-shortener"
version = "0.0.1"
description = "FastAPI URL Shortener"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "pydantic>=2.11.7",
    "pydantic-settings[yaml]>=2.10.1",
    "redis[hiredis]>=6.2.0",
    "typer>=0.16.0",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.17.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.7",
]

[tool.uv]
required-version = "~=0.8.2"

[tool.mypy]
plugins = [
    "pydantic.mypy",
]
strict = true
ignore_missing_imports = true

[tool.ruff]
src = [
    "url-shortener",
]

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.9
target-version = "py312"

[tool.ruff.lint]
select = [
    "ANN", # flake8-annotations (ANN)
    "FAST", # FastAPI (FAST)
    "I", # isort (I)
    "F401", # Pyflakes (F)
    "S", # flake8-bandit (S)
    "LOG", # flake8-logging (LOG)
    # "PT", # flake8-pytest-style (PT)  # todo: remove after delete unittest style tests
    "RET", # flake8-return (RET)
    "ARG", # flake8-unused-arguments (ARG)
    "T20", # flake8-print (T20)
    # "ASYNC", # flake8-async (ASYNC)
]
ignore = [

]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.extend-per-file-ignores]
"stuff.py" = [
    "T20",
]
"url-shortener/tests/*" = ["S101"]

